# TCC-Backend

./: .gitignore
backend/: pyproject.toml
vm-frontend/: docker-compose.yaml
vm-frontend/frontend/: index.html  tailwind.config.js  vite.config.ts
vm-frontend/frontend/src/components/dashboard/: InputModeSelector.tsx
vm-frontend/frontend/src/components/gallery/: JobCard.tsx
vm-frontend/frontend/src/hooks/: useJobSubmit.ts
vm-frontend/frontend/src/pages/: Dashboard.tsx  Gallery.tsx  Login.tsx
vm-frontend/frontend/src/routes/: AppRoutes.tsx
vm-frontend/frontend/src/services/: api.ts  jobs.ts
vm-ia/: .env.example  README.md  pyproject.toml  run_worker.py
vm-ia/app/: worker.py
vm-ia/app/core/: config.py  database.py  storage.py
vm-ia/app/models/: artifact_model.py  job_event_model.py  job_model.py  user_model.py
vm-ia/wrappers/: README.md
vm-ia/wrappers/dreamfusion/: run.py
vm-ia/wrappers/sf3d/: run.py
vm-mgmnt/: docker-compose.yaml
vm-mgmnt/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_poetry.py
vm-mgmnt/backend/alembic/: env.py
vm-mgmnt/backend/alembic/versions/: 10847bfe0432_initial_tables.py
vm-mgmnt/backend/app/: initial_data.py  main.py  worker.py
vm-mgmnt/backend/app/api/: api.py  deps.py
vm-mgmnt/backend/app/api/endpoints/: auth.py  jobs.py
vm-mgmnt/backend/app/core/: config.py  database.py  queue.py  security.py  storage.py
vm-mgmnt/backend/app/db/seeds/: ai_models.json
vm-mgmnt/backend/app/models/: __init__.py  ai_model.py  job_event_model.py  job_model.py
vm-mgmnt/backend/app/schemas/: artifact.py  job.py  user.py
vm-storage/: docker-compose.yaml
