[project]
name = "tcc-worker"
version = "0.1.0"
description = "Worker Assíncrono para Processamento de IA 3D"
authors = [
    {name = "Gustavo", email = "stremps.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "rq (>=2.6.1,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "boto3 (>=1.42.25,<2.0.0)"
]
# Nota: Foi removido asyncpg, fastapi, uvicorn, alembic, passlib, bcrypt em relação ao original.

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false